# rust-example

./: .sqllsrc.json  Cargo.toml  README.md
migrations/: 20230430181604_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscribe.rs  subscriptions.rs
tests/common/: mod.rs  startup.rs
