[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread" ] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.13.3"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
env_logger = "0.10.0"

[dev-dependencies]
reqwest = "0.11"
